--- a/.github/workflows/elixir.yaml
+++ b/.github/workflows/elixir.yaml
@@ -1,12 +1,12 @@
 on:
   workflow_call:
     inputs:
-      build_docs:
+      build-docs:
         default: true
         required: false
         type: boolean
     secrets:
-      github_token:
+      github-token:
         required: true
 
 jobs:
@@ -68,16 +68,16 @@ jobs:
 
       - name: Test
         env:
-          GITHUB_TOKEN: ${{ secrets.github_token }}
+          GITHUB_TOKEN: ${{ secrets.github-token }}
         run: mix coveralls.github
 
       - name: Docs Build
-        if: inputs.build_docs && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main)'
+        if: inputs.build-docs && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main)'
         run: mix docs --formatter=html
 
       - name: Docs Publish
-        if: inputs.build_docs && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main)'
+        if: inputs.build-docs && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main)'
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.github_token }}
+          github-token: ${{ secrets.github-token }}
           publish_dir: doc
