--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -72,11 +72,11 @@ jobs:
         run: mix coveralls.github
 
       - name: Docs Build
-        if: inputs.build-docs && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main)'
+        if: inputs.build-docs && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')
         run: mix docs --formatter=html
 
       - name: Docs Publish
-        if: inputs.build-docs && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main)'
+        if: inputs.build-docs && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')
         uses: peaceiris/actions-gh-pages@v3
         with:
           github-token: ${{ secrets.github-token }}
