--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -79,5 +79,5 @@ jobs:
         if: inputs.build-docs && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: doc
