--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -13,6 +13,9 @@ jobs:
   ci:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+
     container:
       image: elixir:${{ inputs.elixir-version }}
 
